--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "ava": "^0.22.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
@@ -17,7 +18,7 @@
   "scripts": {
     "build": "babel src -d dist",
     "lint": "eslint src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,16 @@
   "bugs": {
     "url": "https://github.com/crux-wild/promise/issues"
   },
-  "homepage": "https://github.com/crux-wild/promise#readme"
+  "homepage": "https://github.com/crux-wild/promise#readme",
+  "ava": {
+    "files": ["spec/**/*.spec.js"],
+    "source": ["**/*.{js,jsx}", "!dist/**/*"],
+    "concurrency": 5,
+    "failFast": true,
+    "failWithoutAssertions": false,
+    "tap": true,
+    "powerAssert": false,
+    "require": ["babel-register"],
+    "babel": "inherit"
+  }
 }
